@@ -1,8 +1,8 @@
-﻿//
+//
 //  Author:
 //    Wojciech Kotlarski
 //
-//  Copyright (c) 2012, Wojciech Kotlarski
+//  Copyright (c) 2013, Wojciech Kotlarski
 //
 //  All rights reserved.
 //
@@ -26,38 +26,19 @@
 //
 
 using System;
-using Spring.FluentContext.Examples.AdvancedLookupMethodInjection;
-using Spring.FluentContext.Examples.AdvancedPropertySetterInjection;
-using Spring.FluentContext.Examples.CollectionInjection;
-using Spring.FluentContext.Examples.Complex;
-using Spring.FluentContext.Examples.ConstructorInjection;
-using Spring.FluentContext.Examples.LookupMethodInjection;
-using Spring.FluentContext.Examples.PropertyInjection;
-using Spring.FluentContext.Examples.ProxyFactoryUsage;
-using Spring.FluentContext.Examples.VariousCreationMethods;
 
-namespace Spring.FluentContext.Examples
+namespace Spring.FluentContext.Examples.CollectionInjection.Objects
 {
-	static class Program
+	class Constructor : IWorker, IDisposable
 	{
-		static void Main()
+		public void WorkOn(string item)
 		{
-			Console.WriteLine("Usage examples of Spring.FluentContext:\n---------------------------------------");
-			var examples = new Example[]
-			{
-				new ConstructorInjectionExample(), 
-				new PropertyInjectionExample(),
-				new LookupMethodInjectionExample(), 
-				new CollectionInjectionExample(),
-				new VariousCreationMethodsExample(),
-				new AdvancedPropertySetterInjectionExample(),
-				new AdvancedLookupMethodInjectionExample(),
-				new ProxyFactoryUsageExample(),
-				new ComplexExample()
-			};
+			Console.WriteLine("Constructing {0}...", item);
+		}
 
-			foreach (var example in examples)
-				example.Show();
+		public void Dispose()
+		{
+			Console.WriteLine("Cleaning {0} - this is an example that inline objects are also properly destroyed by context", typeof(Constructor).Name);
 		}
 	}
 }
