@@ -1,8 +1,8 @@
-﻿//
+//
 //  Author:
 //    Wojciech Kotlarski
 //
-//  Copyright (c) 2012, Wojciech Kotlarski
+//  Copyright (c) 2013, Wojciech Kotlarski
 //
 //  All rights reserved.
 //
@@ -26,38 +26,17 @@
 //
 
 using System;
-using Spring.FluentContext.Examples.AdvancedLookupMethodInjection;
-using Spring.FluentContext.Examples.AdvancedPropertySetterInjection;
-using Spring.FluentContext.Examples.CollectionInjection;
-using Spring.FluentContext.Examples.Complex;
-using Spring.FluentContext.Examples.ConstructorInjection;
-using Spring.FluentContext.Examples.LookupMethodInjection;
-using Spring.FluentContext.Examples.PropertyInjection;
-using Spring.FluentContext.Examples.ProxyFactoryUsage;
-using Spring.FluentContext.Examples.VariousCreationMethods;
+using System.Collections.Generic;
 
-namespace Spring.FluentContext.Examples
+namespace Spring.FluentContext.Examples.CollectionInjection.Objects
 {
-	static class Program
+	class Distributor : IWorker
 	{
-		static void Main()
-		{
-			Console.WriteLine("Usage examples of Spring.FluentContext:\n---------------------------------------");
-			var examples = new Example[]
-			{
-				new ConstructorInjectionExample(), 
-				new PropertyInjectionExample(),
-				new LookupMethodInjectionExample(), 
-				new CollectionInjectionExample(),
-				new VariousCreationMethodsExample(),
-				new AdvancedPropertySetterInjectionExample(),
-				new AdvancedLookupMethodInjectionExample(),
-				new ProxyFactoryUsageExample(),
-				new ComplexExample()
-			};
+		public IDictionary<string, Shop> DistributionMap { get; set; }
 
-			foreach (var example in examples)
-				example.Show();
+		public void WorkOn(string item)
+		{
+			Console.WriteLine("Distributing {0} to {1}...\n", item, DistributionMap[item]);
 		}
 	}
 }
