@@ -1,8 +1,8 @@
-﻿//
+//
 //  Author:
 //    Wojciech Kotlarski
 //
-//  Copyright (c) 2012, Wojciech Kotlarski
+//  Copyright (c) 2013, Wojciech Kotlarski
 //
 //  All rights reserved.
 //
@@ -25,39 +25,20 @@
 //  SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 //
 
-using System;
-using Spring.FluentContext.Examples.AdvancedLookupMethodInjection;
-using Spring.FluentContext.Examples.AdvancedPropertySetterInjection;
-using Spring.FluentContext.Examples.CollectionInjection;
-using Spring.FluentContext.Examples.Complex;
-using Spring.FluentContext.Examples.ConstructorInjection;
-using Spring.FluentContext.Examples.LookupMethodInjection;
-using Spring.FluentContext.Examples.PropertyInjection;
-using Spring.FluentContext.Examples.ProxyFactoryUsage;
-using Spring.FluentContext.Examples.VariousCreationMethods;
-
-namespace Spring.FluentContext.Examples
+namespace Spring.FluentContext.Examples.CollectionInjection.Objects
 {
-	static class Program
+	class Shop
 	{
-		static void Main()
-		{
-			Console.WriteLine("Usage examples of Spring.FluentContext:\n---------------------------------------");
-			var examples = new Example[]
-			{
-				new ConstructorInjectionExample(), 
-				new PropertyInjectionExample(),
-				new LookupMethodInjectionExample(), 
-				new CollectionInjectionExample(),
-				new VariousCreationMethodsExample(),
-				new AdvancedPropertySetterInjectionExample(),
-				new AdvancedLookupMethodInjectionExample(),
-				new ProxyFactoryUsageExample(),
-				new ComplexExample()
-			};
+		private readonly string _name;
 
-			foreach (var example in examples)
-				example.Show();
+		public Shop(string name)
+		{
+			_name = name;
+		}
+
+		public override string ToString()
+		{
+			return _name;
 		}
 	}
 }
